--- a/style.css
+++ b/style.css
@@ -4,11 +4,19 @@
     border: 1px solid red;
     transition: background-color 2s;
 }
+.ex-1-square:hover{
+    background-color: red;
+}
 .ex-2-square {
     width: 100px;
     height: 100px;
     background: red;
+    transition: width 2s ;
 }
+.ex-2-square:active{
+    width: 100%;
+}
+
 .ex-3-square {
     width: 100px;
     height: 100px;
@@ -71,6 +79,3 @@
     /* Svolgimento esercizio  */
 
 
-.ex-1-square:hover{
-    background-color: red;
-}
