--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
     width: 100px;
     height: 100px;
     background: red;
-    transition: width 2s ;
+    transition: width 2s linear;
 }
 .ex-2-square:active{
     width: 100%;
@@ -21,7 +21,12 @@
     width: 100px;
     height: 100px;
     background: red;
+    transition:border-radius 1s linear;
 }
+.ex-3-square:hover{
+    border-radius: 50% ;
+}
+
 .ex-4-square {
     width: 100px;
     height: 100px;
