--- a/style.css
+++ b/style.css
@@ -31,7 +31,12 @@
     width: 100px;
     height: 100px;
     background: red;
+    transition: opacity 1s ease-out;
 }
+.ex-4-square:hover{
+    opacity: 0;
+}
+
 .ex-5-square {
     margin: 20px;
     width: 60px;
