--- a/style.css
+++ b/style.css
@@ -43,10 +43,18 @@
     height: 60px;
     background: red;
 }
+.ex-5-square:hover {
+   width: ;
+}
+.ex-5-square:active {
+    
+}
 .ex-6-img, .ex-7-img, .ex-8-img {
     width: 500px;
 }
-
+.ex-6-img:hover{
+    filter: grayscale(1);
+}
 .ex-9-img {
     margin: 50px 100px;
     width: 400px;
