--- a/style.css
+++ b/style.css
@@ -66,7 +66,14 @@
 .ex-9-img {
     margin: 50px 100px;
     width: 400px;
+    transition: 2s;
 }
+.ex-9-img:hover{
+    border-radius: 20px;
+    transform: scale(1.5); 
+    filter: sepia(1);
+}
+
 .ex-10-icon {
     font-size: 60px;
 }
