--- a/style.css
+++ b/style.css
@@ -77,7 +77,18 @@
 
 .ex-10-icon {
     font-size: 60px;
+    animation: spin 1s linear infinite;
 }
+@keyframes spin {
+    from {
+        transform:rotate(0deg);
+    }
+    to {
+        transform:rotate(360deg);
+    }
+}
+
+
 .ex-11-icon {
     font-size: 60px;
 }
