--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@
         transform:rotate(0deg);
     }
     to {
-        transform:rotate(360deg);
+        transform:rotate(0deg);
     }
 }
 
@@ -92,6 +92,25 @@
 .ex-11-icon {
     font-size: 60px;
 }
+.ex-11-icon:hover{
+    animation: spin-2 2s;
+}
+@keyframes spin-2{
+    0% {
+        transform:rotate(0deg);
+    }
+   
+    /* 50% {
+        transform:rotate(180deg);
+    } */
+    75% {
+        transform: rotate(270deg);
+    }
+    100% {
+        transform:rotate(0deg);
+    }
+}
+
 .ex-12-button, .ex-13-button {
     position: relative;
     display: block;
