--- a/style.css
+++ b/style.css
@@ -194,4 +194,65 @@
     }
 }
 
+/* ex13  */
+.ex-13-button:hover .ex-13-top-white {
+    animation: move-around-top 5s linear ;
+}
+@keyframes move-around-top {
+    0% {
+        top:-10px;
+        left: 10%;
+    }
+    37% {
+        top: -10px;
+        left: 80%;
+    }
+    45% {
+        top: 50px;
+        left: 80%;
+    }
+    85% {
+        top: 50px;
+        left: -10%;
+    }
+    94% {
+        top: -10px;
+        left: -10%;
+    }
 
+    100% {
+        top:-10px;
+        left: 10%;
+    }
+}
+.ex-13-button:hover .ex-13-bottom-white {
+    animation: move-around-bottom 5s linear ;
+}
+
+@keyframes move-around-bottom {
+    0% {
+        bottom:-10px;
+        right:  10%;
+    }
+    37% {
+        bottom: -10px;
+        right: 80%;
+    }
+    45% {
+        bottom: 50px;
+        right: 80%;
+    }
+    85% {
+        bottom: 50px;
+        right: -10%;
+    }
+    94% {
+       bottom: -10px;
+        right: -10%;
+    }
+
+    100% {
+        bottom:-10px;
+        right: 10%;
+    }
+}
